--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -1,43 +1,29 @@
-name: Deploy Django App to EC2
+name: Deploy Django App
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+      DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+      DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Configure SSH
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
           mkdir -p ~/.ssh
-          echo "$EC2_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "$DEPLOY_SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
+          ssh-keyscan -H $DEPLOY_HOST -p 22 >> ~/.ssh/known_hosts 2>/dev/null || true
           chmod 644 ~/.ssh/known_hosts
 
-      - name: Build and Package
-        run: |
-          pip install -r requirements.txt
-          python setup.py sdist bdist_wheel
-
       - name: Deploy to EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=accept-new -o ConnectTimeout=30 $EC2_USER@$EC2_HOST "bash -s" < ./deploy-django.sh
-
-      - name: Verify Deployment
-        run: |
-          curl -I ${{ secrets.APP_URL }} || echo "Deployment verification failed"
+          ssh -o StrictHostKeyChecking=accept-new -o ConnectTimeout=30 $DEPLOY_USER@$DEPLOY_HOST "bash -s" < ./deploy-django.sh
